Fixed the stop button not showing in videos with long titles

--- a/css/youtubeSexy.sass
+++ b/css/youtubeSexy.sass
@@ -226,6 +226,9 @@
       -ms-user-select: none
       -o-user-select: none
       user-select: none
+      width: 400px
+      float: left
+      padding: 1px 1px 0
 
 .filled
   display: block
